<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/firstname-img"
        android:layout_width="149dp"
        android:layout_height="52dp"
        android:layout_marginEnd="316dp"
        android:layout_marginBottom="400dp"
        android:contentDescription="@string/first_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/input_text_bubble" />

    <ImageView
        android:id="@+id/lastname-img"
        android:layout_width="151dp"
        android:layout_height="51dp"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="400dp"
        android:contentDescription="@string/last_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/input_text_bubble" />

    <ImageView
        android:id="@+id/lastname-img3"
        android:layout_width="151dp"
        android:layout_height="51dp"
        android:layout_marginEnd="308dp"
        android:layout_marginBottom="260dp"
        android:contentDescription="@string/email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/input_text_bubble" />

    <ImageView
        android:id="@+id/lastname-img2"
        android:layout_width="134dp"
        android:layout_height="56dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="396dp"
        android:contentDescription="@string/persons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/input_text_bubble" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="488dp"
        android:layout_height="456dp"
        android:background="#63FFFFFF"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/waitinglist"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/inturnheader"
        android:layout_width="491dp"
        android:layout_height="83dp"
        android:layout_marginStart="480dp"
        android:layout_marginBottom="516dp"
        android:background="#FF9800"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/logotype"
            android:layout_width="127dp"
            android:layout_height="81dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/logo"
            tools:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/gettable_title"
            android:layout_width="220dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:paddingTop="20dp"
            android:text="@string/get_a_table"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/DATE"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:layout_weight="1"
            android:text="@string/date" />

        <TextView
            android:id="@+id/TIME"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:text="@string/time" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/restaurantheader"
        android:layout_width="481dp"
        android:layout_height="82dp"
        android:layout_marginEnd="488dp"
        android:layout_marginBottom="516dp"
        android:background="#E6E6E6"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@+id/inturnheader">

        <ImageView
            android:id="@+id/restaurant_logo"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            app:srcCompat="@drawable/logosaku"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/restaurant_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/robson_st_downtown" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/infosubtitles"
        android:layout_width="490dp"
        android:layout_height="61dp"
        android:layout_marginEnd="472dp"
        android:layout_marginBottom="456dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/waitinglist_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#9A9A9A"
            android:paddingStart="190dp"
            android:paddingEnd="100dp"
            android:text="@string/waiting_list"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FFFFFF" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/firstname_txtinput"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="336dp"
        android:layout_marginBottom="408dp"
        android:hint="@string/first_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/Lastname_txtinput2"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="176dp"
        android:layout_marginBottom="408dp"
        android:hint="@string/last_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/numpersons_txtinput2"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="404dp"
        android:hint="@string/persons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email_txtinput"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="332dp"
        android:layout_marginBottom="264dp"
        android:hint="@string/email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_email"
        android:layout_width="257dp"
        android:layout_height="49dp"
        android:layout_marginEnd="208dp"
        android:layout_marginBottom="328dp"
        android:text="@string/give_us_an_email_to_notify_you_15_min_before_your_table_is_ready"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/get_table"
        android:layout_width="215dp"
        android:layout_height="49dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="184dp"
        android:text="@string/get_table"
        android:textColor="#FFFFFF"
        android:background="#800080"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>